--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  <title>Radcorn Engineering</title>
 
   
 <body>
@@ -50,19 +50,20 @@ navMenu.classList.toggle("active");
 
 </script>
 
-<main class="main-image"style="padding-top:15%; font-size: 155%; margin-top:-50px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
+<main class="main-image"style="padding-top:13%; font-size: 155%; margin-top:-50px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
   
 
-   <div class="metal-fabricator" style="background-color: rgba(0, 94, 255, 0.438); margin: 0px 10px 50px; border-radius: 10px;">
-     <br> <h1>Metal Fabricator Services</h1>
+   <div class="metal-fabricator" style="background-color: rgba(0, 65, 177, 0.581); margin: 0px 10px 50px; border-radius: 10px;">
+     <br> <i style="font-size:40px; color: rgba(199, 201, 242, 0.66);" class="fas fa-cogs"></i> <!-- Font Awesome settings icon -->
+     <h1>Radcon Engineering</h1>
      <p style="padding-bottom: 10px;font-size: 25px;">-----------</p>
-      <p>Welcome to our Metal Fabrication services. We specialize in crafting high-quality metal products tailored to your specifications. Our skilled team ensures precision and excellence in every project.</p>
+      <p class="intro">Welcome to our Metal Fabrication services. We specialize in crafting high-quality metal products tailored to your specifications. Our skilled team ensures precision and excellence in every project.</p>
       <br>
     </div>
    
     <div class="buttons">
-      <button class="blue-button">Get a Quote</button>
-      <button class="blue-button">Learn More</button>
+        <button class="blue-button">Get a Quote <i class="fas fa-comments"></i></button>
+        <button class="blue-button">Learn More <i class="fas fa-info-circle"></i></button>
     </div>
 
 <br>
@@ -70,6 +71,12 @@ navMenu.classList.toggle("active");
 </main>
 
 <style>
+
+.intro{
+
+  padding: 35px;
+
+}
   /* Style for the section */
   section {
       display: flex;
@@ -101,7 +108,7 @@ navMenu.classList.toggle("active");
 
 <section>
   <a class="link" href="#homepage">
-      <i class="fas fa-home icon" style="color: blue;"></i>
+      <i class="fas fa-home icon"></i>
      <u style="font-size: 12px;"><b>Radcorn-Home</b></u>
   </a><u></u>
   <span class="forward-icon"> >
