--- a/home.html
+++ b/home.html
@@ -94,6 +94,8 @@ navMenu.classList.toggle("active");
 
   /* Style for the icons */
   .icon {
+   
+    font-size: 15px;
     margin-left: 7px;
       margin-right: 6px; /* Adjust the spacing as needed */
   }
@@ -108,7 +110,7 @@ navMenu.classList.toggle("active");
 
 <section>
   <a class="link" href="#homepage">
-      <i class="fas fa-home icon"></i>
+      <i class="fas fa-home icon" style="color: blue;"></i>
      <u style="font-size: 12px;"><b>Radcorn-Home</b></u>
   </a><u></u>
   <span class="forward-icon"> >
