--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 
  <header class="header"> 
   <nav class="navbar"> 
-    <a style="background-color: rgba(0, 65, 177, 0.762);width: 95px; padding-top: 3px;padding-left: 8px;width:100px; height: 29px;  border-radius:4px;" href="#" class="nav-logo">RadCorn.</a> 
+    <a style="color: rgb(0, 65, 177);width: 95px; padding-top: 3px;padding-left: 8px;width:100px; height: 29px;  border-radius:4px;" href="#" class="nav-logo">RadCon.</a> 
        <ul class="nav-menu"> 
           <li class="nav-item">
              <a href="#" class="nav-link">Services</a> 
@@ -23,7 +23,7 @@
                
                <li class="nav-item"> <a href="#" class="nav-link">About</a> </li> 
                <li class="nav-item"> <a href="#" class="nav-link">Contact</a> </li> 
-              </ul> <div class="hamburger" style="background-color: rgba(0, 65, 177, 0.762);width: 40px; height: 29px;  border-radius:4px;"><span class="bar"></span> <span class="bar"></span> <span class="bar"></span> 
+              </ul> <div class="hamburger" style="color: rgba(0, 65, 177, 0.762);width: 40px; height: 29px;  border-radius:4px;"><span class="bar"></span> <span class="bar"></span> <span class="bar"></span> 
               </div> 
             </nav>         
  </header>
@@ -50,7 +50,7 @@ navMenu.classList.toggle("active");
 
 </script>
 
-<main class="main-image"style="padding-top:20%; font-size: 155%; margin-top:-50px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
+<main class="main-image"style="padding-top:15%; font-size: 155%; margin-top:10px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
   
 
    <div class="metal-fabricator">
@@ -160,10 +160,10 @@ navMenu.classList.toggle("active");
   /* Style for the links */ 
   .link {
       text-decoration: none;
-      margin-right: 5px;
-      margin-left: 10px; /* Adjust the spacing as needed */
+      margin-right:11px;
+      margin-left: 7px; /* Adjust the spacing as needed */
       color: #333; /* Text color */
-      padding: 20px; /* Add padding to links */
+      padding-top:15px; /* Add padding to links */
   }
 
   /* Style for the icons */
@@ -176,19 +176,20 @@ navMenu.classList.toggle("active");
 
   /* Style for the forward icon */
   .forward-icon {
-    padding-right:5px;
-      font-size:13.5px;
+  
+      font-size:14px;
+      margin-top: 20px;
       color: rgb(0, 0, 255); /* Set the forward icon color to blue */
   }
 </style>
 
-<section>
+<section style="margin: 20px;">
   <a class="link" href="#homepage">
       <i class="fas fa-home icon" style="color: blue;"></i>
      <u style="font-size: 12px;"><b>Radcorn-Home</b></u>
   </a><u></u>
   <span class="forward-icon"> 
-      &gt; >
+      &gt; 
   </span>
   <a class="link" href="#categories">
        Radcorn-Categories
@@ -211,10 +212,10 @@ navMenu.classList.toggle("active");
   .container {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      gap: 25px;
-      max-width: 800px;
+      gap: 12px;
+      max-width: 900px;
       margin: 0 auto;
-      padding: 25px;
+      padding: 8px;
   }
 
   .card {
@@ -224,6 +225,7 @@ navMenu.classList.toggle("active");
   }
 
   .view-more-btn {
+      margin-left: 40px;
       display: inline-block;
       padding: 10px 20px;
       border: 2px solid #333;
@@ -237,9 +239,9 @@ navMenu.classList.toggle("active");
 
 <div class="container">
   <div class="card">
-      <i class="fas fa-wrench"></i> <!-- Font Awesome icon -->
-      <h3>Title 1</h3>
-      <p>Description text goes here.</p>
+      <i  class="fas fa-wrench"></i> <!-- Font Awesome icon -->
+      <h3 style="margin-left:65px;">Title1</h3>
+      <p style="font-size: 13px; padding: 10px;">We can customize Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
   </div>
 
