--- a/home.html
+++ b/home.html
@@ -210,59 +210,69 @@ navMenu.classList.toggle("active");
 <style>
   /* Add your CSS styles here for responsiveness and container styling */
   .container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 12px;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 8px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 10px;
   }
 
   .card {
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-      padding: 25px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .card i {
+    font-size: 24px; /* Adjust the icon size as needed */
   }
 
   .view-more-btn {
-      margin-left: 40px;
-      display: inline-block;
-      padding: 10px 20px;
-      border: 2px solid #333;
-      border-radius: 5px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
+    margin-top: 20px; /* Add margin to separate the button from the text */
+    display: inline-block;
+    padding: 10px 20px;
+    border: 2px solid #fc00006a;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #ffffffcf;
+    font-size: 13px;
+    background-color: rgba(0, 0, 255, 0.882);
   }
 </style>
+
 
 
 <div class="container">
   <div class="card">
       <i  class="fas fa-wrench"></i> <!-- Font Awesome icon -->
-      <h3 style="margin-left:65px;">Title1</h3>
-      <p style="font-size: 13px; padding: 10px;">We can customize Your Metal with our experirience in Metal Fabrication... </p>
+      <h3>Title1</h3>
+      <p style="font-size: 13px; margin-top: 10px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
   </div>
 
   <div class="card">
       <i class="fas fa-hammer"></i> <!-- Font Awesome icon -->
       <h3>Title 2</h3>
-      <p>Description text goes here.</p>
+      <p style="font-size: 13px;margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
   </div>
 
   <div class="card">
       <i class="fas fa-tools"></i> <!-- Font Awesome icon -->
       <h3>Title 3</h3>
-      <p>Description text goes here.</p>
+      <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
   </div>
 
   <div class="card">
       <i class="fas fa-cog"></i> <!-- Font Awesome icon -->
       <h3>Title 4</h3>
-      <p>Description text goes here.</p>
+      <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
   </div>
 </div>
@@ -274,7 +284,14 @@ navMenu.classList.toggle("active");
 
 
 
+<section class="about-radcon" style="margin-top: 20px;"><br>
 
+
+<h2>About Us</h2>
+
+
+
+</section>
 
 
 
