--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
                
                <li class="nav-item"> <a href="#" class="nav-link">About</a> </li> 
                <li class="nav-item"> <a href="#" class="nav-link">Contact</a> </li> 
+               
               </ul> <div class="hamburger" style="color: rgba(0, 65, 177, 0.762);width: 40px; height: 29px;  border-radius:4px;"><span class="bar"></span> <span class="bar"></span> <span class="bar"></span> 
               </div> 
             </nav>         
@@ -163,7 +164,8 @@ navMenu.classList.toggle("active");
       margin-right:11px;
       margin-left: 7px; /* Adjust the spacing as needed */
       color: #333; /* Text color */
-      padding-top:15px; /* Add padding to links */
+      padding-top:20px; /* Add padding to links */
+      margin-bottom: 20px;
   }
 
   /* Style for the icons */
@@ -177,16 +179,16 @@ navMenu.classList.toggle("active");
   /* Style for the forward icon */
   .forward-icon {
   
-      font-size:14px;
-      margin-top: 20px;
+      font-size:18px;
+      margin-top: 3px;
       color: rgb(0, 0, 255); /* Set the forward icon color to blue */
   }
 </style>
 
-<section style="margin: 20px;">
+<section style="margin: 10px;">
   <a class="link" href="#homepage">
       <i class="fas fa-home icon" style="color: blue;"></i>
-     <u style="font-size: 12px;"><b>Radcorn-Home</b></u>
+     <u style="font-size: 12px"><b>Radcorn-Home</b></u>
   </a><u></u>
   <span class="forward-icon"> 
       &gt; 
@@ -196,7 +198,6 @@ navMenu.classList.toggle("active");
       <i class="fas fa-list icon"></i>
   </a>
 </section>
-
 
 
 
@@ -229,19 +230,26 @@ navMenu.classList.toggle("active");
   }
 
   .card i {
-    font-size: 24px; /* Adjust the icon size as needed */
+    font-size: 24px;
+    color: aliceblue; /* Adjust the icon size as needed */
   }
 
   .view-more-btn {
     margin-top: 20px; /* Add margin to separate the button from the text */
     display: inline-block;
     padding: 10px 20px;
-    border: 2px solid #fc00006a;
+    border: 2px solid;
     border-radius: 5px;
     text-decoration: none;
     color: #ffffffcf;
     font-size: 13px;
-    background-color: rgba(0, 0, 255, 0.882);
+    background-color:rgb(0, 65, 177);
+  }
+
+  .liner{
+
+   font-family: 'Trebuchet MS';
+   color: blue;
   }
 </style>
 
@@ -249,29 +257,33 @@ navMenu.classList.toggle("active");
 
 <div class="container">
   <div class="card">
-      <i  class="fas fa-wrench"></i> <!-- Font Awesome icon -->
-      <h3>Title1</h3>
-      <p style="font-size: 13px; margin-top: 10px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
-      <a href="#" class="view-more-btn">View More</a>
-  </div>
-
-  <div class="card">
-      <i class="fas fa-hammer"></i> <!-- Font Awesome icon -->
-      <h3>Title 2</h3>
-      <p style="font-size: 13px;margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
-      <a href="#" class="view-more-btn">View More</a>
-  </div>
-
-  <div class="card">
-      <i class="fas fa-tools"></i> <!-- Font Awesome icon -->
-      <h3>Title 3</h3>
+      <i style="margin-bottom: 10px; background-color:rgb(0, 65, 177); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-wrench"></i> <!-- Font Awesome icon -->
+      <h3>Fabrication</h3>
+      <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
   </div>
 
   <div class="card">
-      <i class="fas fa-cog"></i> <!-- Font Awesome icon -->
-      <h3>Title 4</h3>
+      <i  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-hammer"></i> <!-- Font Awesome icon -->
+      <h3>Shearing</h3>
+      <h5 class="liner">_________</h5>
+      <p style="font-size: 13px;margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
+      <a href="#" class="view-more-btn">View More</a>
+  </div>
+
+  <div class="card">
+      <i  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-tools"></i> <!-- Font Awesome icon -->
+      <h3>Cutting</h3>
+      <h5 class="liner">_________</h5>
+      <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
+      <a href="#" class="view-more-btn">View More</a>
+  </div>
+
+  <div class="card">
+      <i  style="margin-bottom: 10px; background-color: rgb(0, 65, 177); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-cog"></i> <!-- Font Awesome icon -->
+      <h3>Custom Fabrication</h3>
+      <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
   </div>
@@ -279,6 +291,11 @@ navMenu.classList.toggle("active");
 
 
 
+<div class="chat-button">
+  <a href="prosbot.html" class="chat-link">
+      <i class="fas fa-robot"></i>
+  </a>
+</div>
 
 
 
