--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@ navMenu.classList.toggle("active");
 
 </script>
 
-<main class="main-image"style="padding-top:15%; font-size: 155%; margin-top:10px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
+<main class="main-image"style="padding-top:8%; font-size: 155%; margin-top:10px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
   
 
    <div class="metal-fabricator">
@@ -77,7 +77,7 @@ navMenu.classList.toggle("active");
             align-items: center;
             border-radius: 10px;
             background-color: rgba(9, 31, 131, 0.593);
-            padding: 11px; /* Adjust padding as needed */
+            padding: 10px; /* Adjust padding as needed */
         }
 
         .call-icon {
@@ -131,7 +131,7 @@ navMenu.classList.toggle("active");
 
 
 <div style="background-color: rgba(0, 65, 177, 0.581); margin: 0px 10px 30px; border-radius: 10px;">
-     <p style="padding-bottom: 5px;font-size: 25px;">-----------</p>
+     <p style="padding-bottom: 2px;font-size: 25px;">-----------</p>
       <p class="intro">Welcome to our Metal Fabrication services. We specialize in crafting high-quality metal products tailored to your specifications. Our skilled team ensures precision and excellence in every project.</p>
       <br>
     </div>
@@ -149,7 +149,7 @@ navMenu.classList.toggle("active");
 
 .intro{
 
-  padding: 35px;
+  padding: 28px;
 
 }
   /* Style for the section */
@@ -293,7 +293,7 @@ navMenu.classList.toggle("active");
 
 <div class="chat-button">
   <a href="prosbot.html" class="chat-link">
-      <i class="fas fa-robot"></i>
+    <i class="fab fa-whatsapp"></i>
   </a>
 </div>
 
