--- a/home.html
+++ b/home.html
@@ -299,22 +299,78 @@ navMenu.classList.toggle("active");
 
 
 
+<style>
+   .about-radcon-card {
+    display: grid;
+    max-width: 100%; /* Adjusted to be responsive */
+    margin: 20px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+
+  .card-title {
+    text-align: center;
+  }
+
+  .card-title{
+
+ 
+    font-size: 200%;
+    background-color:rgb(0, 65, 177);
+     height: 38px;
+    
+     color:#fff;
+     border-radius: 10px;
+     padding-top: 7px;
+     
 
 
-<section class="about-radcon" style="margin-top: 20px;"><br>
+  }
+
+ 
 
 
-<h2>About Us</h2>
+.exp{
+
+
+
+
+margin-top: 25px;
+
+}
+  @media screen and (min-width: 768px) {
+    /* For screens wider than 768px */
+    .about-radcon-card {
+      max-width: 750px;
+      margin: 40px auto;
+    }
+  }
+</style>
+
+<section class="about-radcon-card">
+
+  <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
+
+  <p class="exp"><i class="fas fa-users exp-icon" style="padding: 7px; color: rgb(7, 7, 174);"></i>At Radcon Engineering, we take pride in our
+     position as a trusted and esteemed name in the world of metal
+      fabrication. Over the years, we have cultivated strong
+       relationships with a diverse range
+     of clients who entrust us with their most demanding projects.
+  </p>
+
 
 
 
 </section>
 
-
-
-
+<section class="about-radcon-card">
+  <h3 class="card-title">What We Offer</h3>
+  <p class="exp">Here are the incredible offerings from Radcon.</p>
+  <!-- Add your content here -->
+</section>
 
 
 </body>
-
 </html>
