--- a/home.html
+++ b/home.html
@@ -301,10 +301,11 @@ navMenu.classList.toggle("active");
 
 <style>
    .about-radcon-card {
+ 
     display: grid;
-    max-width: 100%; /* Adjusted to be responsive */
-    margin: 20px;
-    padding: 20px;
+    max-width: 1000%; /* Adjusted to be responsive */
+    margin: 10px;
+    padding: 15px;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -317,7 +318,7 @@ navMenu.classList.toggle("active");
   .card-title{
 
  
-    font-size: 200%;
+    font-size: 180%;
     background-color:rgb(0, 65, 177);
      height: 38px;
     
@@ -335,7 +336,7 @@ navMenu.classList.toggle("active");
 .exp{
 
 
-
+font-size: 13px;
 
 margin-top: 25px;
 
@@ -349,18 +350,26 @@ margin-top: 25px;
   }
 </style>
 
-<section class="about-radcon-card">
+<div style="background-color: rgba(0, 65, 177, 0.308); padding:5px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(80%);">
+<section class="about-radcon-card" style="margin-top: 15px;">
 
   <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
 
   <p class="exp"><i class="fas fa-users exp-icon" style="padding: 7px; color: rgb(7, 7, 174);"></i>At Radcon Engineering, we take pride in our
      position as a trusted and esteemed name in the world of metal
-      fabrication. Over the years, we have cultivated strong
-       relationships with a diverse range
+      fabrication. Over the years, we have cultivated strong relationships with a diverse range
      of clients who entrust us with their most demanding projects.
   </p>
 
-
+  <h4 align="center" class="centered-text" style="margin-top: 15px; font-size: 14px; color: rgb(0, 65, 177);"><i class="fas fa-cogs rounded-sign-icon"></i> Our Area of Mastery</h4>
+  <p class="exp"><i class="fas fa-check-circle exp-icon"></i> Our expertise spans a wide spectrum,
+     encompassing precision milling, 
+     intricate fabrication, 
+     and comprehensive general engineering solutions.
+      Our highly skilled team brings forth a rich blend of knowledge and experience,
+      ensuring that every project we undertake receives meticulous attention to detail,
+      resulting in outcomes that consistently surpass expectations.</p>
+  <!-- Add your content here -->
 
 
 </section>
@@ -370,6 +379,35 @@ margin-top: 25px;
   <p class="exp">Here are the incredible offerings from Radcon.</p>
   <!-- Add your content here -->
 </section>
+</div>
+
+
+
+
+<section style="margin-top: 40px;">
+
+
+  <h1 style="color: #333; margin-left: 80px;">Opening Hours:</h1>
+
+
+</section>
+
+<h2 style="margin-left:90px;">____________________________________</h2>
+
+
+
+
+<div>
+
+
+
+
+  <p>This is a footer section</p>
+</div>
+
+
+
+
 
 
 </body>
