--- a/home.html
+++ b/home.html
@@ -362,7 +362,7 @@ margin-top: 25px;
   </p>
 
   <h4 align="center" class="centered-text" style="margin-top: 15px; font-size: 14px; color: rgb(0, 65, 177);"><i class="fas fa-cogs rounded-sign-icon"></i> Our Area of Mastery</h4>
-  <p class="exp"><i class="fas fa-check-circle exp-icon"></i> Our expertise spans a wide spectrum,
+  <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> Our expertise spans a wide spectrum,
      encompassing precision milling, 
      intricate fabrication, 
      and comprehensive general engineering solutions.
@@ -371,6 +371,18 @@ margin-top: 25px;
       resulting in outcomes that consistently surpass expectations.</p>
   <!-- Add your content here -->
 
+  <h4 align="center" class="centered-text" style="margin-top: 15px; font-size: 14px; color: rgb(0, 65, 177);"><i class="fas fa-cogs rounded-sign-icon"></i> What Sets Us Apart?</h4>
+
+  <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> <b style="color:rgb(0, 65, 177);">Uncompromising Precision:</b> At Radcon Engineering,
+     precision is not just a goal; it's a commitment.
+     We meticulously measure and craft each component to exact specifications,
+     guaranteeing the highest standards of quality.</p>
+  <p class="exp"><i style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i><b style="color:rgb(0, 65, 177);">Reliable Partner:</b>
+     Our clients rely on us for more than just our technical proficiency.
+     They trust us for our unwavering reliability, knowing that we consistently deliver on time and within budget.</p>
+  <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> <b style="color:rgb(0, 65, 177);">Innovation at Its Core:</b> In a world of evolving technology and techniques,
+     we stay at the forefront of the industry. We continuously embrace the latest innovations and methodologies,
+      ensuring that our solutions remain both cutting-edge and tailored to your unique needs.</p>
 
 </section>
 
