--- a/home.html
+++ b/home.html
@@ -351,7 +351,7 @@ margin-top: 25px;
 </style>
 
 <div style="background-color: rgba(0, 65, 177, 0.308); padding:5px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(80%);">
-<section class="about-radcon-card" style="margin-top: 15px;">
+<section class="about-radcon-card" style="margin-top: 15px; filter: brightness(100%);">
 
   <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
 
@@ -377,7 +377,7 @@ margin-top: 25px;
      precision is not just a goal; it's a commitment.
      We meticulously measure and craft each component to exact specifications,
      guaranteeing the highest standards of quality.</p>
-  <p class="exp"><i style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i><b style="color:rgb(0, 65, 177);">Reliable Partner:</b>
+  <p class="exp"><i style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i><b style="color:rgb(0, 65, 177); margin-left: 6px;">Reliable Partner:</b>
      Our clients rely on us for more than just our technical proficiency.
      They trust us for our unwavering reliability, knowing that we consistently deliver on time and within budget.</p>
   <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> <b style="color:rgb(0, 65, 177);">Innovation at Its Core:</b> In a world of evolving technology and techniques,
@@ -415,6 +415,7 @@ margin-top: 25px;
 
 
   <p>This is a footer section</p>
+
 </div>
 
 
