--- a/home.html
+++ b/home.html
@@ -396,29 +396,177 @@ margin-top: 25px;
 
 
 
-<section style="margin-top: 40px;">
+
+<style>
 
 
-  <h1 style="color: #333; margin-left: 80px;">Opening Hours:</h1>
+.hours {
+  margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.opening-hours-container {
+    text-align: center;
+ 
+
+    color: #0a3ced;
+    max-width: 300px;
+}
+
+.icon-container {
+
+    
+    margin: 0 auto;
+ 
+  
+    justify-content: center;
+    align-items: center;
+}
+
+.centered-line {
+    border: none;
+    border-top: 2px solid #0011ff;
+    margin: 20px 0;
+}
+
+.op {
+    margin: 0;
+}
+
+.text-width-line {
+    border: none;
+    border-top: 2px solid #0112ff;
+    width: 50%;
+    margin: 20px auto;
+}
 
 
-</section>
 
-<h2 style="margin-left:90px;">____________________________________</h2>
-
-
-
-
-<div>
+</style>
 
 
 
 
-  <p>This is a footer section</p>
 
+
+<div class="hours">
+<div class="opening-hours-container">
+  <div class="icon-container">
+      <i style="font-size: 26px;" class="fas fa-clock"></i>
+  </div>
+  <hr class="centered-line">
+  <h2 class="op">Opening Hours</h2>
+  <hr class="text-width-line">
+</div>
+
+</div>
+<div class="time">
+
+
+<div class="table-container">
+  
+  <table>
+      <tr>
+          <th>Day</th>
+          <th>Opening Time</th>
+          <th>Closing Time</th>
+      </tr>
+      <tr>
+          <td>Monday</td>
+          <td>07:30</td>
+          <td>16:30</td>
+      </tr>
+      <tr>
+          <td>Tuesday</td>
+          <td>07:30</td>
+          <td>16:30</td>
+      </tr>
+      <tr>
+          <td>Wednesday</td>
+          <td>07:30</td>
+          <td>16:30</td>
+      </tr>
+      <tr>
+          <td>Thursday</td>
+          <td>07:30</td>
+          <td>16:30</td>
+      </tr>
+      <tr>
+          <td>Friday</td>
+          <td>07:30</td>
+          <td>16:30</td>
+      </tr>
+      <tr>
+          <td>Saturday</td>
+          <td>Closed</td>
+          <td>Closed</td>
+      </tr>
+      <tr>
+          <td>Sunday</td>
+          <td>Closed</td>
+          <td>Closed</td>
+      </tr>
+  </table>
 </div>
 
 
+<style>
+
+
+
+.time {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+}
+
+.table-container {
+    width: 95%;
+    max-width: 600px;
+    text-align: center;
+    padding: 20px;
+    background-color: #f5f5f5;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+th {
+    background-color:rgb(0, 65, 177);
+    color: #fff;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+
+
+
+
+
+</style>
+
+
+
+<div class="address">
+
+
+
+</div>
 
 
 
