--- a/home.html
+++ b/home.html
@@ -306,7 +306,7 @@ navMenu.classList.toggle("active");
     max-width: 1000%; /* Adjusted to be responsive */
     margin: 10px;
     padding: 15px;
-    background-color: #fff;
+    background-color: #ffffffdd;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
   }
@@ -350,8 +350,8 @@ margin-top: 25px;
   }
 </style>
 
-<div style="background-color: rgba(0, 65, 177, 0.308); padding:5px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(80%);">
-<section class="about-radcon-card" style="margin-top: 15px; filter: brightness(100%);">
+<div style="background-color: rgba(0, 65, 177, 0.308); padding:5px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(95%);">
+<section class="about-radcon-card" style="margin-top: 15px; ">
 
   <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
 
@@ -377,7 +377,7 @@ margin-top: 25px;
      precision is not just a goal; it's a commitment.
      We meticulously measure and craft each component to exact specifications,
      guaranteeing the highest standards of quality.</p>
-  <p class="exp"><i style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i><b style="color:rgb(0, 65, 177); margin-left: 6px;">Reliable Partner:</b>
+  <p class="exp"><i style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i><b style="color:rgb(0, 65, 177); margin-left: 5px;">Reliable Partner:</b>
      Our clients rely on us for more than just our technical proficiency.
      They trust us for our unwavering reliability, knowing that we consistently deliver on time and within budget.</p>
   <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> <b style="color:rgb(0, 65, 177);">Innovation at Its Core:</b> In a world of evolving technology and techniques,
@@ -395,7 +395,7 @@ margin-top: 25px;
 
 
 
-
+<div style="background-color: rgb(0, 65, 177); padding: 1px;">
 
 <style>
 
@@ -412,7 +412,7 @@ margin-top: 25px;
     text-align: center;
  
 
-    color: #0a3ced;
+    color: #e0e0e0;
     max-width: 300px;
 }
 
@@ -428,7 +428,7 @@ margin-top: 25px;
 
 .centered-line {
     border: none;
-    border-top: 2px solid #0011ff;
+    border-top: 2px solid #e2e2e2;
     margin: 20px 0;
 }
 
@@ -438,7 +438,7 @@ margin-top: 25px;
 
 .text-width-line {
     border: none;
-    border-top: 2px solid #0112ff;
+    border-top: 2px solid #e3e3e3;
     width: 50%;
     margin: 20px auto;
 }
@@ -455,10 +455,10 @@ margin-top: 25px;
 <div class="hours">
 <div class="opening-hours-container">
   <div class="icon-container">
-      <i style="font-size: 26px;" class="fas fa-clock"></i>
+      <i style="font-size: 26px;" class="fas fa-clock">.</i>
   </div>
   <hr class="centered-line">
-  <h2 class="op">Opening Hours</h2>
+  <h2 class="op">Our Opening Hours</h2>
   <hr class="text-width-line">
 </div>
 
@@ -511,7 +511,7 @@ margin-top: 25px;
       </tr>
   </table>
 </div>
-
+<br>
 
 <style>
 
@@ -526,12 +526,12 @@ margin-top: 25px;
 }
 
 .table-container {
-    width: 95%;
+    width: 98%;
     max-width: 600px;
     text-align: center;
     padding: 20px;
     background-color: #f5f5f5;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.684);
 }
 
 table {
@@ -560,11 +560,13 @@ tr:nth-child(even) {
 
 </style>
 
+</div><br><br>
+</div>
 
 
 <div class="address">
 
-
+<h2>Our Location </h2>
 
 </div>
 
