--- a/home.html
+++ b/home.html
@@ -253,6 +253,31 @@ navMenu.classList.toggle("active");
   }
 </style>
 
+<hr class="centered">
+
+
+<style>
+
+.centered {
+    border: none;
+    border-top: 3px solid #0030e0;
+    margin: 10px 35%;
+    border-radius: 500px;
+ 
+
+}
+
+
+
+
+</style>
+
+
+
+
+
+
+
 
 
 <div class="container">
@@ -289,7 +314,7 @@ navMenu.classList.toggle("active");
   </div>
 </div>
 
-
+<hr class="centered">
 
 <div class="chat-button">
   <a href="prosbot.html" class="chat-link">
@@ -393,7 +418,12 @@ margin-top: 25px;
 </section>
 </div>
 
+<div style="padding: 7px;">
+  <hr class="centered">
 
+
+
+</div>
 
 <div style="background-color: rgb(0, 65, 177); padding: 1px;">
 
@@ -563,10 +593,15 @@ tr:nth-child(even) {
 </div><br><br>
 </div>
 
+<div style="padding: 7px;">
+  <hr class="centered">
 
+
+
+</div>
 <div class="address">
 
-<h2>Our Location </h2>
+
 
 </div>
 
