--- a/home.html
+++ b/home.html
@@ -595,9 +595,6 @@ tr:nth-child(even) {
 
 <div style="padding: 7px;">
   <hr class="centered">
-
-
-
 </div>
 
 
@@ -611,7 +608,10 @@ tr:nth-child(even) {
   
   </iframe>
 
-
+  <div style="padding: 7px;">
+    <hr class="centered">
+  </div>
+  
 </div><br>
 
 
