--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@ navMenu.classList.toggle("active");
 
 </script>
 
-<main class="main-image"style="padding-top:8%; font-size: 155%; margin-top:10px;     background-image:URL(metal.jpg); background-repeat:no-repeat;  background-size:cover;">
+<main class="main-image"style="padding-top:8%; font-size: 155%; margin-top:10px;     background-image:URL(); background-repeat:no-repeat;  background-size:cover;">
   
 
    <div class="metal-fabricator">
@@ -375,7 +375,7 @@ margin-top: 25px;
   }
 </style>
 
-<div style="background-color: rgba(0, 65, 177, 0.308); padding:5px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(95%);">
+<div style="background-color: rgba(0, 65, 177, 0.308); padding:5px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(97%);">
 <section class="about-radcon-card" style="margin-top: 15px; ">
 
   <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
@@ -412,9 +412,9 @@ margin-top: 25px;
 </section>
 
 <section class="about-radcon-card">
-  <h3 class="card-title">What We Offer</h3>
+  <!-- <h3 class="card-title">What We Offer</h3>
   <p class="exp">Here are the incredible offerings from Radcon.</p>
-  <!-- Add your content here -->
+   Add your content here -->
 </section>
 </div>
 
@@ -598,24 +598,56 @@ tr:nth-child(even) {
 </div>
 
 
-<div class="address">
+
+
+
+
+
+
+<div>
+
+
+
+</div>
+
+<div class="address-container">
+
 
   <iframe
   
   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105926.81832812264!2d25.450353597265618!3d-33.93564749999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e7ad3ab8e9843cb%3A0x846cc0278dac8143!2sRadcon%20Engineering!5e0!3m2!1sen!2sza!4v1695168195371!5m2!1sen!2sza"
-   width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade; align-items:center;">
+   width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
   
   
   </iframe>
 
-  <div style="padding: 7px;">
+
+</div><br>
+ <div style="padding: 7px;">
     <hr class="centered">
   </div>
   
-</div><br>
+
+<style>
+
+.address-container{
+  margin-top: 40px;
+
+  justify-content: center;
+  display: flex;
+  
+
+
+}
+
+
+</style>
 
 
 
+<div>
 
+
+</div>
 </body>
 </html>
