--- a/home.html
+++ b/home.html
@@ -329,7 +329,7 @@ navMenu.classList.toggle("active");
  
     display: grid;
     max-width: 1000%; /* Adjusted to be responsive */
-    margin: 10px;
+    margin: 20px;
     padding: 15px;
     background-color: #ffffffdd;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -411,10 +411,10 @@ margin-top: 25px;
 
 </section>
 
-<section class="about-radcon-card">
-  <h3 class="card-title">What We Offer</h3>
+ <section class="about-radcon-card">
+  <!-- <h3 class="card-title">What We Offer</h3>
   <p class="exp">Here are the incredible offerings from Radcon.</p>
-  <!-- Add your content here -->
+ Add your content here -->
 </section>
 </div>
 
