--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   
-  <title>Radcorn Engineering</title>
+  <title>Radcon Engineering</title>
 
   
 <body>
@@ -752,7 +752,7 @@ footer {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #333;
+ background-color: rgb(3, 73, 195);
   color: #fff;
   padding: 30px 0;
 }
@@ -792,36 +792,36 @@ footer {
   color: #00bcd4;
 }
 </style>
-</head>
-<body>
-<footer>
-<div class="footer-container">
-  <div class="footer-section">
-      <h4>About</h4>
-      <ul>
-          <li><a href="#metal-fabrication">Metal Fabrication</a></li>
-          <li><a href="#milling">Milling</a></li>
-          <li><a href="#custom-fabrication">Custom Fabrication</a></li>
-          <li><a href="#cutting">Cutting</a></li>
-      </ul>
-  </div>
-  <div class="footer-section">
-      <h4>Contact</h4>
-      <ul>
-          <li>Email: <a href="mailto:info@radcon.com">info@radcon.com</a></li>
-          <li><a href="#send-query">Send Query</a></li>
-      </ul>
-  </div>
-  <div class="footer-section">
-      <h4>Our Services</h4>
-      <ul>
-          <li><a href="#metal-fabrication">Metal Fabrication</a></li>
-          <li><a href="#milling">Milling</a></li>
-          <li><a href="#custom-fabrication">Custom Fabrication</a></li>
-          <li><a href="#cutting">Cutting</a></li>
-      </ul>
-  </div>
-</div>
+
+  <footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h4>About</h4>
+            <ul>
+                <li><a href="#metal-fabrication">Metal Fabrication</a></li>
+                <li><a href="#milling">Milling</a></li>
+                <li><a href="#custom-fabrication">Custom Fabrication</a></li>
+                <li><a href="#cutting">Cutting</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h4>Contact</h4>
+            <ul>
+                <li>Email: <a href="mailto:info@radcon.com">info@radcon.com</a></li>
+                <li><a href="#send-query">Send Query</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h4>Our Services</h4>
+            <ul>
+                <li><a href="#metal-fabrication">Metal Fabrication</a></li>
+                <li><a href="#milling">Milling</a></li>
+                <li><a href="#custom-fabrication">Custom Fabrication</a></li>
+                <li><a href="#cutting">Cutting</a></li>
+            </ul>
+        </div>
+    </div>
+    <p>&copy; 2023 Your Company Name. All Rights Reserved.</p>
 </footer>
 
 
