--- a/home.html
+++ b/home.html
@@ -291,7 +291,7 @@ navMenu.classList.toggle("active");
 
   <div class="card">
       <i  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-hammer"></i> <!-- Font Awesome icon -->
-      <h3>Shearing</h3>
+      <h3>Milling</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px;margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
       <a href="#" class="view-more-btn">View More</a>
@@ -674,7 +674,27 @@ tr:nth-child(even) {
    padding-left:30px;
 }
     
+
+.background{
+
+  background-image: url('welding.gif'); /* Replace 'your-gif-url.gif' with the actual URL of your GIF */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+             padding-right: 600%;
+            color: #fff; /* Text color on top of the background */
+            padding: 10px 30px;
+        }
+
+
+
+
+
     </style>
+<div class="background">
+
+
+
 
     <div class="Our-Address">
         <i class="fas fa-map-marker-alt"></i>
@@ -737,7 +757,7 @@ tr:nth-child(even) {
 }
 </style>
 
-
+</div>
 
 <div class="shortcuts">
 
