--- a/home.html
+++ b/home.html
@@ -286,8 +286,10 @@ navMenu.classList.toggle("active");
       <h3>Fabrication</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
-      <a href="#" class="view-more-btn">View More</a>
+      <a href="fab.html" class="view-more-btn">View More</a>
   </div>
+
+
 
   <div class="card">
       <i  style="margin-bottom: 10px; background-color:rgb(0, 65, 177);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-hammer"></i> <!-- Font Awesome icon -->
@@ -706,7 +708,7 @@ tr:nth-child(even) {
 
 
 <div class="address">
-  <h4 class="real-add">- 1 Sydenham Rd, Sydenham, Gqeberha, 6001</h4>
+  <h4 class="real-add">1 Sydenham Rd, Sydenham, Gqeberha, 6001</h4>
 
 </div>
 
@@ -731,10 +733,7 @@ tr:nth-child(even) {
 
 
 </div><br>
- <div style="padding: 7px;">
-    <hr class="centered">
-  </div>
-  
+
 
 <style>
 
@@ -761,7 +760,7 @@ tr:nth-child(even) {
 
 <div class="shortcuts">
 
-<h4>This is The PLace for shortcuts > Recent Links > quick Check > Blog > Projects > Job Applications > More about Metal Fabrication ></h4>
+
 
 </div>
 
@@ -774,7 +773,7 @@ footer {
   padding: 0;
  background-color: rgb(3, 73, 195);
   color: #fff;
-  padding: 30px 0;
+  padding: 10px 0;
 }
 
 .footer-container {
@@ -812,6 +811,9 @@ footer {
   color: #00bcd4;
 }
 </style>
+<div style="padding: 1px;">
+  <hr class="centered">
+</div>
 
   <footer>
     <div class="footer-container">
@@ -841,7 +843,7 @@ footer {
             </ul>
         </div>
     </div>
-    <p>&copy; 2023 Your Company Name. All Rights Reserved.</p>
+    <p align="center" style="font-size:9px; padding: 10px;"> &copy; 2023 Radcon. All Rights Reserved.</p>
 </footer>
 
 
