--- a/fab.html
+++ b/fab.html
@@ -65,7 +65,7 @@ navMenu.classList.toggle("active");
     </div>
    
     <div class="buttons">
-        <button class="blue-button">Home Page<i class="fas fa-home"></i></button>
+        <button class="blue-button">Home <i class="fas fa-home"></i></button>
         <button class="blue-button">Get Quote <i class="fas fa-comments"></i></button>
     </div>
 
@@ -188,7 +188,7 @@ navMenu.classList.toggle("active");
     width: 100%;
     height: 100%;
     color:  #ececece6;
-    font-size: 32px;
+    font-size: 18px;
     text-decoration: none;
 }
 
