--- a/home.html
+++ b/home.html
@@ -158,15 +158,17 @@ navMenu.classList.toggle("active");
 <section style="margin: 10px;">
   <a class="link" href="#homepage">
       <i class="fas fa-home icon" style="color: blue;"></i>
-     <u style="font-size: 12px"><b>Radcorn-Home</b></u>
+     <u style="font-size: 12px"><b>Radcon-Home</b></u>
   </a><u></u>
   <span class="forward-icon"> 
-      &gt; 
+      //
   </span>
   <a class="link" href="#categories">
-       Radcorn-Categories
+       Radcon-Services
       <i class="fas fa-list icon"></i>
   </a>
+ 
+
 </section>
 
 
@@ -256,7 +258,7 @@ navMenu.classList.toggle("active");
       <h3>Fabrication</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
-      <a href="fab.html" class="view-more-btn">View More</a>
+      <a href="fabrication.html" class="view-more-btn">View More</a>
   </div>
 
 
@@ -266,7 +268,7 @@ navMenu.classList.toggle("active");
       <h3>Milling</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px;margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
-      <a href="#" class="view-more-btn">View More</a>
+      <a href="milling.html" class="view-more-btn">View More</a>
   </div>
 
   <div class="card">
@@ -274,7 +276,7 @@ navMenu.classList.toggle("active");
       <h3>Cutting</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
-      <a href="#" class="view-more-btn">View More</a>
+      <a href="cutting.html" class="view-more-btn">View More</a>
   </div>
 
   <div class="card">
@@ -282,7 +284,7 @@ navMenu.classList.toggle("active");
       <h3>Custom Fabrication</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
-      <a href="#" class="view-more-btn">View More</a>
+      <a href="custom.html" class="view-more-btn">View More</a>
   </div>
 </div>
 
@@ -392,7 +394,6 @@ margin-top: 25px;
 
 <div style="padding: 7px;">
   <hr class="centered">
-
 
 
 </div>
@@ -813,7 +814,7 @@ footer {
             </ul>
         </div>
     </div>
-    <p align="center" style="font-size:9px; padding: 10px;"> &copy; 2023 Radcon. All Rights Reserved.</p>
+    <p align="center" style="font-size:9px; padding: 10px;"> &copy; 2023 Radcon. All Rights Reserved. Made by skilsiter</p>
 </footer>
 
 
