--- a/custom.html
+++ b/custom.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   
-  <title>Radcon Engineering</title>
+  <title>Radcon-Custom Fabrication</title>
 
   
 <body>
@@ -57,7 +57,7 @@ navMenu.classList.toggle("active");
    <div class="metal-fabricator">
     <div style="background-color: rgba(0, 65, 177, 0.581); margin: 0px 10px 20px; border-radius: 10px;">
      <br> <i style="font-size:40px; color: rgba(199, 201, 242, 0.66);" class="fas fa-cogs"></i> <!-- Font Awesome settings icon -->
-     <h1>Fabrication</h1><br>
+     <h1>Custom Fabrication</h1><br>
     </div>
     
     
@@ -65,8 +65,8 @@ navMenu.classList.toggle("active");
     </div>
    
     <div class="buttons">
-        <button class="blue-button">Home <i class="fas fa-home"></i></button>
-        <button class="blue-button">Get Quote <i class="fas fa-comments"></i></button>
+      <a href="home.html"><button class="blue-button"> Home  <i class="fas fa-home"></i></button></a>
+      <a href="#"> <button class="blue-button"> Get Quote <i class="fas fa-comments"></i></button></a>
     </div>
 
 <br>
@@ -114,23 +114,58 @@ navMenu.classList.toggle("active");
 </style>
 
 <section style="margin: 10px;">
-  <a class="link" href="#homepage">
+  <a class="link" href="#fabcrication">
       <i class="fas fa-home icon" style="color: blue;"></i>
-     <u style="font-size: 12px"><b>Radcorn-Fabrication</b></u>
+     <u style="font-size: 12px"><b>Radcon-Home</b></u>
   </a><u></u>
   <span class="forward-icon"> 
-      &gt; 
+      //
   </span>
-  <a class="link" href="#categories">
-       Radcorn-Home
+  <a class="link" href="home.html">
+       Radcon-Services
       <i class="fas fa-list icon"></i>
   </a>
+
+  <span class="forward-icon"> 
+    //
+</span>
+<a class="link" href="#categories">
+  Radcon-Custom Fabcrication
+ <i class="fas fa-list icon"></i>
+</a>
 </section>
 
 
 
 
+<style>
 
+.about-radcon-card {
+ 
+ display: flex;
+ max-width: 1000%; /* Adjusted to be responsive */
+ margin: 20px;
+ padding: 15px;
+ background-color: #ffffffdd;
+ box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+ border-radius: 10px;
+}
+
+
+</style>
+
+
+
+<section class="about-radcon-card" style="margin-top: 15px; ">
+
+
+  <p class="exp"><i class="fas fa-users exp-icon" style="padding: 7px; color: rgb(7, 7, 174);"></i>At Radcon Engineering, we take pride in our
+     position as a trusted and esteemed name in the world of metal
+      fabrication. Over the years, we have cultivated strong relationships with a diverse range
+     of clients who entrust us with their most demanding projects.
+  </p>
+
+</section>
 
 
 
