--- a/milling.html
+++ b/milling.html
@@ -65,9 +65,9 @@ navMenu.classList.toggle("active");
     </div>
    
     <div class="buttons">
-      <a href="home.html"><button class="blue-button"> Home  <i class="fas fa-home"></i></button></a>
-      <a href="#"> <button class="blue-button"> Get Quote <i class="fas fa-comments"></i></button></a>
-    </div>
+        <button class="blue-button"> <a style="color: aliceblue;" href="home.html" > Home <i class="fas fa-home"></i></a> </button>
+        <button class="blue-button"> <a style="color:aliceblue;" href="#"> Get Quote <i class="fas fa-comments"></i></button></a>
+       </div>
 
 <br>
 
