--- a/home.html
+++ b/home.html
@@ -304,9 +304,9 @@ navMenu.classList.toggle("active");
     display: grid;
     max-width: 1000%; /* Adjusted to be responsive */
     margin: 20px;
-    padding: 15px;
-    background-color: #ffffffdd;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    background-color: #ffffffeb;
+    box-shadow: 5px 4px 6px rgb(0, 0, 0);
     border-radius: 10px;
   }
 
@@ -316,7 +316,6 @@ navMenu.classList.toggle("active");
 
   .card-title{
 
- 
     font-size: 180%;
     background-color:rgb(0, 65, 177);
      height: 38px;
@@ -343,13 +342,13 @@ margin-top: 25px;
   @media screen and (min-width: 768px) {
     /* For screens wider than 768px */
     .about-radcon-card {
-      max-width: 750px;
-      margin: 40px auto;
+      max-width: 700px;
+      margin: 20px auto;
     }
   }
 </style>
 
-<div style="background-color: rgba(0, 65, 177, 0.308); padding:5px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(97.5%);">
+<div style="background-color: rgba(0, 65, 177, 0.308); padding:1px;margin-top: 50px; background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover; filter: brightness(97.5%);">
 <section class="about-radcon-card" style="margin-top: 15px; ">
 
   <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
