--- a/home.html
+++ b/home.html
@@ -353,13 +353,25 @@ margin-top: 25px;
 
   <h3 class="card-title"><i class="fas fa-industry icon" style="padding-right:10px; font-size: 20px;"></i>About Radcon Engineering</h3>
 
-  <p class="exp"><i class="fas fa-users exp-icon" style="padding: 7px; color: rgb(7, 7, 174);"></i>At Radcon Engineering, we take pride in our
-     position as a trusted and esteemed name in the world of metal
-      fabrication. Over the years, we have cultivated strong relationships with a diverse range
-     of clients who entrust us with their most demanding projects.
+  <p class="exp"><i class="fas fa-users exp-icon" style="padding: 7px; color: rgb(7, 7, 174);"></i>Radcon Engineering, a beacon of excellence in the realm of metal fabrication,
+     stands tall as an emblem of trustworthiness and prestige.
+     Our journey through the years has been marked by a relentless pursuit of craftsmanship and innovation,
+     which has solidified our position as a go-to partner for clients across diverse industries.
+     In our relentless quest for perfection, we have forged robust and enduring relationships with a myriad of clients.
+    These relationships are not just partnerships; 
+     they are a testament to our unwavering commitment to delivering the highest quality solutions. 
+     Our clients hail from a broad spectrum of industries,
+     ranging from aerospace and automotive to construction and manufacturing.
+    They come to us with their most demanding projects,
+     fully confident in our ability to meet and exceed their expectations.
   </p>
 
   <h4 align="center" class="centered-text" style="margin-top: 15px; font-size: 14px; color: rgb(0, 65, 177);"><i class="fas fa-cogs rounded-sign-icon"></i> Our Area of Mastery</h4>
+
+  <div style="padding: 1px;margin-top:-5px;">
+    <hr class="centered">
+
+
   <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> Our expertise spans a wide spectrum,
      encompassing precision milling, 
      intricate fabrication, 
@@ -370,7 +382,9 @@ margin-top: 25px;
   <!-- Add your content here -->
 
   <h4 align="center" class="centered-text" style="margin-top: 15px; font-size: 14px; color: rgb(0, 65, 177);"><i class="fas fa-cogs rounded-sign-icon"></i> What Sets Us Apart?</h4>
-
+  <div style="padding: 1px; margin-top:-5px;">
+    <hr class="centered">
+  </div>
   <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> <b style="color:rgb(0, 65, 177);">Uncompromising Precision:</b> At Radcon Engineering,
      precision is not just a goal; it's a commitment.
      We meticulously measure and craft each component to exact specifications,
@@ -384,10 +398,7 @@ margin-top: 25px;
 
 </section>
 
- <section class="about-radcon-card">
-  <!-- <h3 class="card-title">What We Offer</h3>
-  <p class="exp">Here are the incredible offerings from Radcon.</p>
- Add your content here -->
+  
 </section>
 </div>
 
