--- a/home.html
+++ b/home.html
@@ -158,14 +158,14 @@ navMenu.classList.toggle("active");
 <section style="margin: 10px;">
   <a class="link" href="#homepage">
       <i class="fas fa-home icon" style="color: blue;"></i>
-     <u style="font-size: 12px"><b>Radcon-Home</b></u>
+     <u style="font-size: 11px">Radcon-Home</u>
   </a><u></u>
   <span class="forward-icon"> 
       //
   </span>
   <a class="link" href="#categories">
        Radcon-Services
-      <i class="fas fa-list icon"></i>
+
   </a>
  
 
@@ -375,7 +375,7 @@ margin-top: 25px;
   <p class="exp"><i  style="color:rgb(0, 65, 177);" class="fas fa-check-circle exp-icon"></i> Our expertise spans a wide spectrum,
      encompassing precision milling, 
      intricate fabrication, 
-     and comprehensive general engineering solutions.
+     and comprehensive general engineering solutions. 55
       Our highly skilled team brings forth a rich blend of knowledge and experience,
       ensuring that every project we undertake receives meticulous attention to detail,
       resulting in outcomes that consistently surpass expectations.</p>
