--- a/custom.html
+++ b/custom.html
@@ -99,10 +99,10 @@ navMenu.classList.toggle("active");
   /* Style for the icons */
   .icon {
    
-    font-size: 15px;
-    margin-left: 7px;
-      margin-right: 6px; /* Adjust the spacing as needed */
-  }
+   font-size: 95%;
+   margin-left: 7px;
+     margin-right: 6px; /* Adjust the spacing as needed */
+ }
 
   /* Style for the forward icon */
   .forward-icon {
