--- a/fabrication.html
+++ b/fabrication.html
@@ -99,7 +99,7 @@ navMenu.classList.toggle("active");
   /* Style for the icons */
   .icon {
    
-    font-size: 15px;
+    font-size: 95%;
     margin-left: 7px;
       margin-right: 6px; /* Adjust the spacing as needed */
   }
