--- a/cutting.html
+++ b/cutting.html
@@ -89,8 +89,8 @@ navMenu.classList.toggle("active");
   /* Style for the links */ 
   .link {
       text-decoration: none;
-      margin-right:11px;
-      margin-left: 7px; /* Adjust the spacing as needed */
+      margin-right:6px;
+      margin-left: 5px; /* Adjust the spacing as needed */
       color: #333; /* Text color */
       padding-top:20px; /* Add padding to links */
       margin-bottom: 20px;
@@ -99,7 +99,7 @@ navMenu.classList.toggle("active");
   /* Style for the icons */
   .icon {
    
-    font-size: 15px;
+    font-size: 95%;
     margin-left: 7px;
       margin-right: 6px; /* Adjust the spacing as needed */
   }
