--- a/fabrication.html
+++ b/fabrication.html
@@ -77,7 +77,7 @@ navMenu.classList.toggle("active");
 
 .intro{
 
-  padding: 28px;
+  padding: 2px;
 
 }
   /* Style for the section */
@@ -89,8 +89,8 @@ navMenu.classList.toggle("active");
   /* Style for the links */ 
   .link {
       text-decoration: none;
-      margin-right:11px;
-      margin-left: 7px; /* Adjust the spacing as needed */
+      margin-right:6px;
+      margin-left: 5px; /* Adjust the spacing as needed */
       color: #333; /* Text color */
       padding-top:20px; /* Add padding to links */
       margin-bottom: 20px;
@@ -116,7 +116,7 @@ navMenu.classList.toggle("active");
 <section style="margin: 10px;">
   <a class="link" href="#fabcrication">
       <i class="fas fa-home icon" style="color: blue;"></i>
-     <u style="font-size: 12px"><b>Radcon-Home</b></u>
+     <u style="font-size: 10px">Radcon-Home</u>
   </a><u></u>
   <span class="forward-icon"> 
       /
@@ -140,33 +140,43 @@ navMenu.classList.toggle("active");
 
 <style>
 
-.about-radcon-card {
- 
- display: flex;
- max-width: 1000%; /* Adjusted to be responsive */
- margin: 20px;
- padding: 15px;
- background-color: #ffffffdd;
- box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
- border-radius: 10px;
-}
 
+    /* Add your CSS styles here for responsiveness and container styling */
+    .container {
+    display: grid;
 
+    gap: 10px;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 10px;
+  }
+
+  .card {
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .card i {
+    font-size: 24px;
+    color: aliceblue; /* Adjust the icon size as needed */
+  }
 </style>
 
 
 
-<section class="about-radcon-card" style="margin-top: 15px; ">
-
-
-  <p class="exp"><i class="fas fa-users exp-icon" style="padding: 7px; color: rgb(7, 7, 174);"></i>At Radcon Engineering, we take pride in our
-     position as a trusted and esteemed name in the world of metal
-      fabrication. Over the years, we have cultivated strong relationships with a diverse range
-     of clients who entrust us with their most demanding projects.
-  </p>
-
-</section>
-
+<div class="container">
+  <div class="card">
+      <i style="margin-bottom: 10px; background-color:rgb(0, 65, 177); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-wrench"></i> <!-- Font Awesome icon -->
+      <h3>Fabrication</h3>
+      <h5 class="liner">_________</h5>
+      <p style="font-size: 13px; margin-top: 20px;">We can customize could make more Your Metal with our experirience in Metal Fabrication... </p>
+      <a href="fabrication.html" class="view-more-btn">View More</a>
+  </div>
 
 
 
