--- a/custom.html
+++ b/custom.html
@@ -100,8 +100,8 @@ navMenu.classList.toggle("active");
   .icon {
    
     font-size: 95%;
-    margin-left: 7px;
-      margin-right: 6px; /* Adjust the spacing as needed */
+    margin-left: 4px;
+      margin-right: 5px; /* Adjust the spacing as needed */
   }
 
   /* Style for the forward icon */
@@ -116,7 +116,7 @@ navMenu.classList.toggle("active");
 <section style="margin: 10px;">
   <a class="link" href="#fabcrication">
       <i class="fas fa-home icon" style="color: blue;"></i>
-     <u style="font-size: 12px"><b>Radcon-Home</b></u>
+     <u style="font-size: 10px">Radcon-Home</u>
   </a><u></u>
   <span class="forward-icon"> 
       /
