--- a/learn.html
+++ b/learn.html
@@ -51,13 +51,13 @@ navMenu.classList.toggle("active");
 
 </script>
 
-<main class="main-image"style="padding-top:8%; font-size: 155%; margin-top:10px;     background-image:URL(radcon.jpg); background-repeat:no-repeat;  background-size:cover;">
+<main class="main-image"style="padding-top:6%; font-size: 155%; margin-top:10px;  background-repeat:no-repeat;  background-size:cover;">
   
 
    <div class="metal-fabricator">
-    <div style="background-color: rgba(0, 65, 177, 0.581); margin: 0px 10px 20px; border-radius: 10px;">
-     <br> <i style="font-size:40px; color: rgba(199, 201, 242, 0.66);" class="fas fa-cogs"></i> <!-- Font Awesome settings icon -->
-     <h1>Get a Quote</h1><br>
+    <div style="background-color: rgba(255, 255, 255, 0.945); margin: 0px 10px 20px; border-radius: 10px;">
+     <br> <i style="font-size:40px; color: rgba(0, 9, 179, 0.66);" class="fas fa-cogs"></i> <!-- Font Awesome settings icon -->
+     <h1>Learn More</h1><br>
     </div>
     
     
@@ -66,7 +66,7 @@ navMenu.classList.toggle("active");
    
     <div class="buttons">
      <button class="blue-button"> <a style="color: aliceblue;" href="home.html" > Home <i class="fas fa-home"></i></a> </button>
-     <button class="blue-button"> <a style="color:aliceblue;" href="learn.html">Learn More<i class="fas fa-comments"></i></button></a>
+     <button class="blue-button"> <a style="color:aliceblue;" href="query.html"> Get Quote <i class="fas fa-comments"></i></button></a>
     </div>
 
 <br>
@@ -77,7 +77,6 @@ navMenu.classList.toggle("active");
 
 .intro{
 
-  padding: 2px;
 
 }
   /* Style for the section */
@@ -130,7 +129,7 @@ navMenu.classList.toggle("active");
     /
 </span>
 <a class="link" href="#categories">
-  Quote
+  Learn
  
 </a>
 </section>
@@ -161,7 +160,7 @@ navMenu.classList.toggle("active");
       flex-direction: column;
       align-items: center;
       text-align: center;
-      background-color: rgba(25, 25, 25, 0.526);
+      background-color:#fff;
     }
   
     .card i {
@@ -192,9 +191,6 @@ navMenu.classList.toggle("active");
   
 
 
-
-
-<div class="bgcolor" style=" background-color: rgb(255, 255, 255);">
 
 
 
