--- a/milling.html
+++ b/milling.html
@@ -66,7 +66,7 @@ navMenu.classList.toggle("active");
    
     <div class="buttons">
      <button class="blue-button"> <a style="color: aliceblue;" href="home.html" > Home <i class="fas fa-home"></i></a> </button>
-     <button class="blue-button"> <a style="color:aliceblue;" href="#"> Get Quote <i class="fas fa-comments"></i></button></a>
+     <button class="blue-button"> <a style="color:aliceblue;" href="query.html"> Get Quote <i class="fas fa-comments"></i></button></a>
     </div>
 
 <br>
