--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@ navMenu.classList.toggle("active");
 
    <div class="metal-fabricator">
     <div style="background-color: rgba(0, 65, 177, 0.581); margin: 0px 10px 20px; border-radius: 10px;">
-     <br> <i style="font-size:40px; color: rgba(237, 238, 255, 0.826);" class="fas fa-cogs">/*-*\</i> <!-- Font Awesome settings icon -->
+     <br> <i style="font-size:40px; color: rgba(237, 238, 255, 0.826);" class="fas fa-cogs"></i> <!-- Font Awesome settings icon -->
      <h1>Radcon Engineering</h1><br>
     </div>
      <style>
@@ -534,7 +534,7 @@ margin-top: 25px;
 <div  class="container">
   <div style="background-image: url(metal.jpg); background-size: 217% auto;background-repeat: no-repeat; background-position:65%;">
   <div class="card" >
-      <i style="margin-bottom: 10px; background-color:rgb(255, 255, 255); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-wrench">(0)</i> <!-- Font Awesome icon -->
+      <i style="margin-bottom: 10px; background-color:rgb(255, 255, 255); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-clock"></i> <!-- Font Awesome icon -->
       <h3>Opening Hours</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;"> view our opening and closing times.</p>
@@ -548,7 +548,7 @@ margin-top: 25px;
   <div style="background-image: url(radcon.jpg); background-size: 120% auto;background-repeat: no-repeat; background-position:65%;">
       <div class="card" >
   
-      <i  style="margin-bottom: 10px; filter:none ;  background-color:rgb(255, 255, 255);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-hammer">++</i> <!-- Font Awesome icon -->
+      <i  style="margin-bottom: 10px; filter:none ;  background-color:rgb(255, 255, 255);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-map-marker"></i> <!-- Font Awesome icon -->
       <h3> Address </h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px;margin-top: 20px;">Find Our Location and Address. </p>
@@ -558,7 +558,7 @@ margin-top: 25px;
 
   <div style="background-image: url(radcon.jpg); background-size: 120% auto;background-repeat: no-repeat; background-position:65%;">
       <div class="card" >
-      <i  style="margin-bottom: 10px; background-color:rgb(255, 255, 255);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-tools">&</i> <!-- Font Awesome icon -->
+      <i  style="margin-bottom: 10px; background-color:rgb(255, 255, 255);width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-phone"></i> <!-- Font Awesome icon -->
       <h3>Contact</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;"> Contact Us Instantly </p>
@@ -567,7 +567,7 @@ margin-top: 25px;
   </div>
   <div style="background-image: url(metal.jpg); background-size: 230% auto;background-repeat: no-repeat; background-position:65%;">
       <div class="card" >
-      <i  style="margin-bottom: 10px; background-color: rgb(255, 255, 255); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-cog">@</i> <!-- Font Awesome icon -->
+      <i  style="margin-bottom: 10px; background-color: rgb(255, 255, 255); width: 50px; height:40px; padding-top: 8px;border-radius: 8px;" class="fas fa-newspaper"></i> <!-- Font Awesome icon -->
       <h3>Articles</h3>
       <h5 class="liner">_________</h5>
       <p style="font-size: 13px; margin-top: 20px;">View Our Articles</p>
