--- a/home.html
+++ b/home.html
@@ -912,11 +912,11 @@ document.addEventListener('DOMContentLoaded', function() {
 .accordion {
   margin-bottom: 15px;
   border-radius: 5px;
-  font-family: cursive;
+  font-family: serif;
 }
 
 .accordion-header {
-  font-family: cursive;
+  font-family: serif;
   display: flex;
   align-items: center;
   justify-content:center;
@@ -994,7 +994,7 @@ background-color: #ffffff;
 
   .m-text{
 
-    font-family: cursive;
+    font-family: serif;
 font-size: 13px;
 
 margin-top: 25px;
